crates/nrz-lib/src/cli/snapshots/nrz_lib__cli__test__nrz---filter=web-watch-build.snap
---
source: crates/nrz-lib/src/cli/mod.rs
expression: err
---
error: Cannot use watch arguments before `watch` subcommand

Usage: nrz [OPTIONS] [COMMAND]

For more information, try '--help'.
