crates/nrz-lib/src/cli/snapshots/nrz_lib__cli__test__nrz---no-daemon-boundaries.snap
---
source: crates/nrz-lib/src/cli/mod.rs
expression: err
---
error: Cannot use run arguments before `boundaries` subcommand

Usage: nrz [OPTIONS] [COMMAND]

For more information, try '--help'.
