crates/nrz-lib/src/cli/snapshots/nrz_lib__cli__test__nrz---no-daemon-watch-build.snap
---
source: crates/nrz-lib/src/cli/mod.rs
expression: err
---
error: Cannot use run arguments outside of run command

Usage: nrz [OPTIONS] [COMMAND]

For more information, try '--help'.
